Changes for 1.8.5rc1

 - [ZBX-3100] fixed messages in popup when no proxies or discovery checks defined (Vedmak)
 - [ZBX-3138] fixed bug when disabling application, webitems were disabled too (Vedmak)
 - [ZBX-2951] made interval hidden for trapper items (Vedmak)
 - [ZBX-2867] changed order of "Discovery" and "IT services" in configuration menu (Vemdak)
 - [ZBX-3460] forbid saving host with enabled ipmi but without ipmi address (Vedmak)
 - [ZBX-3047] fixed zapcat compatibility for trigger expressions (Aly,Sasha,asaveljevs)
 - [ZBX-2912] added check for valid UTF-8 characters in the incoming data (Sasha)
 - [ZBX-1346] add more user parameter examples (Richlv)
 - [ZBX-2922] changed log level from warning to debug for some messages (Sasha)
 - [ZBX-3440] Added pagination to slide and discovery configuration (KB)
 - [ZBX-3433] fixed removing deleted passive proxies from queue (Sasha)
 - [ZBX-416] fixed PostgreSQL errors in configuration sender module when using DM setup (Sasha)
 - [ZBX-3346] fixed items being polled more frequently than necessary (Sasha)
 - [ZBX-3409] fixed semaphore and shared memory access permissions (Sasha)
 - [ZBX-3173] made server-side JSON parser ignore whitespace better (asaveljevs)
 - [ZBX-3425] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Richlv)
 - [ZBX-3403] fixed SQL statements for auto registration and discovery operations (Sasha)
 - [ZBX-3403] removed UNIQUE constraint for autoreg_host_1 index (Sasha)
 - [ZBX-3414] expressions for triggers with web items are marked as error in trigger wizard (Vedmak)
 - [ZBX-3406] better api validation (Vedmak)
 - [ZBX-3413] added escaping of parameters used in LIKE SQL statements (KB)
 - [ZBX-3391] fixed wrong comparison operators used for strings (Vlad)
 - [ZBX-1346] document LogSlowQueries configuration parameter (Richlv)
 - [ZBXNEXT-612] added mapname url parameter for monitoring->maps (Vedmak)
 - [ZBX-886] remove duplicate translation strings (Richlv)