@@ -1,0 +1,5 @@
+## Process this file with automake to produce Makefile.in
+
+noinst_LIBRARIES = libzbxexec.a
+
+libzbxexec_a_SOURCES = zbxexec.c
