@@ -27,6 +27,7 @@
 #include "http.h"
 #include "net.h"
 #include "system.h"
+#include "zbxexec.h"
 
 #if !defined(_WINDOWS)
 #	define VFS_TEST_FILE "/etc/passwd"
@@ -148,28 +149,27 @@ int	EXECUTE_STR(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 	SECURITY_ATTRIBUTES sa;
 	HANDLE hWrite=NULL, hRead=NULL;
 	LPTSTR	wcommand;
+	int	len;
+	char	*command = NULL;
+	char	stat_buf[128];
 
 #else /* not _WINDOWS */
 
-	FILE	*hRead = NULL;
+	char	error[MAX_STRING_LEN];
 
 #endif /* _WINDOWS */
 
 	int	ret = SYSINFO_RET_FAIL;
-
-	char	stat_buf[128];
-	char	*cmd_result=NULL;
-	char	*command=NULL;
-	int	len;
+	char	*cmd_result = NULL;
 
 	assert(result);
 
 	init_result(result);
 
+#if defined(_WINDOWS)
+
 	cmd_result = zbx_dsprintf(cmd_result,"");
 	memset(stat_buf, 0, sizeof(stat_buf));
-
-#if defined(_WINDOWS)
 
 	/* Set the bInheritHandle flag so pipe handles are inherited */
 	sa.nLength = sizeof(SECURITY_ATTRIBUTES);
@@ -228,74 +228,35 @@ int	EXECUTE_STR(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 
 
 #else /* not _WINDOWS */
-	command = zbx_dsprintf(command, "%s", param);
 
-	if(0 == (hRead = popen(command,"r")))
+	switch (zbx_execute(param, &cmd_result, error, sizeof(error)))
 	{
-		switch (errno)
-		{
-			case	EINTR:
-				ret = SYSINFO_RET_TIMEOUT;
-				break;
-			default:
-				ret = SYSINFO_RET_FAIL;
-				break;
-		}
-		goto lbl_exit;
+		case SUCCEED:
+			ret = SYSINFO_RET_OK;
+			break;
+		default:
+			SET_MSG_RESULT(result, strdup(error));
+			ret = SYSINFO_RET_FAIL;
 	}
-
-	;
-	/* Read process output */
-	while( (len = fread(stat_buf, 1, sizeof(stat_buf)-1, hRead)) > 0 )
-	{
-		cmd_result = zbx_strdcat(cmd_result, stat_buf);
-		memset(stat_buf, 0, sizeof(stat_buf));
-	}
-
-	if(0 != ferror(hRead))
-	{
-		switch (errno)
-		{
-			case	EINTR:
-				ret = SYSINFO_RET_TIMEOUT;
-				break;
-			default:
-				ret = SYSINFO_RET_FAIL;
-				break;
-		}
-		goto lbl_exit;
-	}
-
-	if(pclose(hRead) == -1)
-	{
-		switch (errno)
-		{
-			case	EINTR:
-				ret = SYSINFO_RET_TIMEOUT;
-				break;
-			default:
-				ret = SYSINFO_RET_FAIL;
-				break;
-		}
-		goto lbl_exit;
-	}
-
-	hRead = NULL;
 
 #endif /* _WINDOWS */
 
-	zabbix_log(LOG_LEVEL_DEBUG, "Before");
-
-	zbx_rtrim(cmd_result, "\r\n");
-
-	/* We got EOL only */
-	if(cmd_result[0] == '\0')
+	if (SYSINFO_RET_OK == ret)
 	{
-		ret = SYSINFO_RET_FAIL;
-		goto lbl_exit;
-	}
+		zbx_rtrim(cmd_result, ZBX_WHITESPACE);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "Run remote command [%s] Result [%d] [%.20s]...", command, strlen(cmd_result), cmd_result);
+		/* We got EOL only */
+		if ('\0' == *cmd_result)
+		{
+			ret = SYSINFO_RET_FAIL;
+			goto lbl_exit;
+		}
+	}
+	else
+		goto lbl_exit;
+
+	zabbix_log(LOG_LEVEL_DEBUG, "Run remote command [%s] Result [%d] [%.20s]...",
+				param, strlen(cmd_result), cmd_result);
 
 	SET_TEXT_RESULT(result, strdup(cmd_result));
 
@@ -306,11 +267,10 @@ lbl_exit:
 #if defined(_WINDOWS)
 	if ( hWrite )	{ CloseHandle(hWrite);	hWrite = NULL; }
 	if ( hRead)	{ CloseHandle(hRead);	hRead = NULL; }
-#else /* not _WINDOWS */
-	if ( hRead )	{ pclose(hRead);	hRead = NULL; }
-#endif /* _WINDOWS */
 
 	zbx_free(command)
+#endif	/* _WINDOWS */
+
 	zbx_free(cmd_result);
 
 	return ret;
