@@ -1,5 +1,6 @@
 Changes for 1.8.5rc1
 
+ - [ZBX-3446] added timeout handler for external scripts (Sasha)
  - [ZBX-3100] fixed messages in popup when no proxies or discovery checks defined (Vedmak)
  - [ZBX-3138] fixed bug when disabling application, webitems were disabled too (Vedmak)
  - [ZBX-2951] made interval hidden for trapper items (Vedmak)
